# Nullity

./: CMakeLists.txt  LICENSE  README.md  main.cpp  nullity.h
3rdparties/: README.md  README.pd
data/: README.md
src/: exceptions.h
src/algo/: CMakeLists.txt
src/algo/ml/: activations.h  base.h  slp.cpp  slp.h
src/algo/ml/unsupervised/: kmeans.cpp  kmeans.h
src/algo/rndm/distributions/: Bernaulli.cpp  Gaussian.cpp  Poison.cpp  Uniform.cpp  distributions.cpp  distributions.h
src/algo/rndm/generate/: generator.cpp  generator.h  synthetic.h
src/algo/tracking/: tracker.cpp  tracker.h
src/algo/tracking/Kalman/: kalman.cpp  kalman.h
src/data/: CMakeLists.txt  consts.h  data.cpp  data.h  helper.h  utils.cpp  utils.h
src/data/dataset/: dataset.h
src/utils/: CMakeLists.txt  Logger.cpp  Logger.h  maths.cpp  maths.h  utils.cpp  utils.h
src/vision/: CMakeLists.txt  video.cpp  video.h  vision_utils.cpp  vision_utils.h
tests/: test_main.cpp
tests/base/: CMakeLists.txt  test.h  test_features.cpp  test_logger.cpp  test_matrix.cpp  test_ml.cpp  test_point.cpp  test_rndm.cpp  test_video.cpp
